test/functions/ferguson/ref-pair/record-this-intent-const-error.good
record-this-intent-const-error.chpl:13: error: const actual is passed to 'ref' formal 'this' of setsField()
record-this-intent-const-error.chpl:3: note: to formal of type R
record-this-intent-const-error.chpl:6: note: to ref formal here
